--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,6 +28,6 @@
 
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p>&copy; Venkat Ritesh Ghanta {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
