--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <title>
-    {{ page.title }} &middot; {{ site.title }}
+    Ritesh Ghanta &middot; {{ site.title }}
   </title>
 
   <!-- CSS -->
