--- a/y-des.css
+++ b/y-des.css
@@ -274,3 +274,25 @@ p, a {
 .y-musiclist > li > span:nth-child(2) {
   color: #345678;
 }
+
+.y-projectlist > ul {
+  float: left;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  font-family: "Open Sans";
+  font-size: 12px;
+  padding-left: 7px;
+  padding-top: 14px;
+}
+.y-projectlist > ul > li {
+  margin-bottom: 7px;
+  padding-bottom: 9px;
+  border-bottom: 1px solid #EEEEEE;
+  box-shadow: rgba(245, 245, 245, 1) 0px 1px 2px 0px;
+}
+.y-projectlist > ul > li > a {
+  font-family: "Arvo";
+  font-size: 13px;
+}
+
