--- a/y-des.css
+++ b/y-des.css
@@ -262,11 +262,15 @@ p, a {
 }
 .y-musiclist > li {
   border-bottom: 1px solid #EEEEEE;
-  margin-bottom: 5px;
-  padding-bottom: 3px;
+  //margin-bottom: 5px;
+  padding-bottom: 2px;
+  padding-top: 2px;
   line-height: 18px;
   padding-left: 8px;
   padding-right: 10px;
+}
+.y-musiclist > li:hover {
+  background-color: #E7E7E7;
 }
 .y-musiclist > li > span:nth-child(1) {
   color: #DB3236;
